Исправил недочёты по Spring и Mockito. Проверьте пожалуйста.